# vellum

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  canvas.c  framebuffer.c  style.md  ve_canvas.h  ve_cell.h  ve_char.h  ve_colour.h  ve_framebuffer.h  ve_irm_framebuffer.c  ve_style.h  vellum.c  vellum.h
.github/workflows/: build.yml  cmake-single-platform.yml  lint.yml
include/vellum/: canvas.h  cell.h  char.h  colour.h  framebuffer.h  style.h
src/: canvas.c  irm_framebuffer.c
